--- a/www/public/resources/styles/select2.css
+++ b/www/public/resources/styles/select2.css
@@ -222,7 +222,7 @@ https://github.com/select2/select2/issues/3278#issuecomment-258481272 : */
     padding: 1px; }
   .select2-container--default .select2-selection--multiple .select2-selection__choice {
     background-color: #5473e8; /* modifié */
-    border-radius: 2px;
+    border-radius: 16px;
     box-sizing: border-box;
     display: inline-block;
     margin-left: 5px;
@@ -244,9 +244,9 @@ https://github.com/select2/select2/issues/3278#issuecomment-258481272 : */
   .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
     background-color: transparent;
     border: none;
-    border-right: 1px solid #aaa;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
+    /* border-right: 1px solid #aaa; */
+    border-top-left-radius: 16px;
+    border-bottom-left-radius: 16px;
     color: #999;
     cursor: pointer;
     font-size: 1em;
