--- a/www/public/resources/styles/common.css
+++ b/www/public/resources/styles/common.css
@@ -291,19 +291,19 @@ input::placeholder {
 }
 
 /* Tous les boutons bleus */
-.btn-large-blue, .btn-medium-blue, .btn-small-blue, .btn-xsmall-blue, .btn-xxsmall-blue, .btn-fit-blue, .btn-round-blue {
+.btn-large-blue, .btn-medium-blue, .btn-small-blue, .btn-xsmall-blue, .btn-xxsmall-blue, .btn-fit-blue, .round-btn-blue {
     background-color: #5473e8;
 }
 /* Tous les boutons verts */
-.btn-large-green, .btn-medium-green, .btn-small-green, .btn-xsmall-green, .btn-xxsmall-green, .btn-fit-green, .btn-round-green {
+.btn-large-green, .btn-medium-green, .btn-small-green, .btn-xsmall-green, .btn-xxsmall-green, .btn-fit-green, .round-btn-green {
     background-color: #15bf7f;
 }
 /* Tous les boutons rouges */
-.btn-large-red, .btn-medium-red, .btn-small-red, .btn-xsmall-red, .btn-xxsmall-red, .btn-fit-red, .btn-round-red {
+.btn-large-red, .btn-medium-red, .btn-small-red, .btn-xsmall-red, .btn-xxsmall-red, .btn-fit-red, .round-btn-red {
     background-color: #ff0044;
 }
 /* Tous les boutons jaunes */
-.btn-large-yellow, .btn-medium-yellow, .btn-small-yellow, .btn-xsmall-yellow, .btn-xxsmall-yellow, .btn-fit-yellow, .btn-round-yellow {
+.btn-large-yellow, .btn-medium-yellow, .btn-small-yellow, .btn-xsmall-yellow, .btn-xxsmall-yellow, .btn-fit-yellow, .round-btn-yellow {
     background-color: #ffb536;
 }
 /* Boutons taille large */
@@ -329,17 +329,17 @@ input::placeholder {
 }
 
 /* Tous les boutons bleus :hover */
-.btn-large-blue:hover, .btn-medium-blue:hover, .btn-small-blue:hover, .btn-xsmall-blue:hover, .btn-xxsmall-blue:hover, .btn-fit-blue:hover, .btn-round-blue:hover {
+.btn-large-blue:hover, .btn-medium-blue:hover, .btn-small-blue:hover, .btn-xsmall-blue:hover, .btn-xxsmall-blue:hover, .btn-fit-blue:hover, .round-btn-blue:hover {
     transition-duration: 0.4s;
     background-color: #4e69cd;
 }
 /* Tous les boutons verts :hover */
-.btn-large-green:hover, .btn-medium-green:hover, .btn-small-green:hover, .btn-xsmall-green:hover, .btn-xxsmall-green:hover, .btn-fit-green:hover, .btn-round-green:hover {
+.btn-large-green:hover, .btn-medium-green:hover, .btn-small-green:hover, .btn-xsmall-green:hover, .btn-xxsmall-green:hover, .btn-fit-green:hover, .round-btn-green:hover {
     transition-duration: 0.4s;
     background-color: #12a16a;
 }
 /* Tous les boutons rouges :hover */
-.btn-large-red:hover, .btn-medium-red:hover, .btn-small-red:hover, .btn-xsmall-red:hover, .btn-xxsmall-red:hover, .btn-fit-red:hover, .btn-round-red:hover {
+.btn-large-red:hover, .btn-medium-red:hover, .btn-small-red:hover, .btn-xsmall-red:hover, .btn-xxsmall-red:hover, .btn-fit-red:hover, .round-btn-red:hover {
     transition-duration: 0.4s;
     background-color: #dc0044;
 }
@@ -347,7 +347,7 @@ input::placeholder {
 /**
  *  Round btns
  */
-[class^="btn-round"] {
+[class^="round-btn"] {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -359,12 +359,11 @@ input::placeholder {
     transition: max-width 0.7s;
     margin: 0 3px 0 3px;
     color: white;
-    background-color: #15bf7f;
     border-radius: 60px;
     cursor: pointer;
 }
 
-[class^="btn-round"] img {
+[class^="round-btn"] img {
     width: 16px;
 }
 
