--- a/www/public/resources/styles/run.css
+++ b/www/public/resources/styles/run.css
@@ -1,4 +1,3 @@
-/* div qui affiche les journaux d'opérations */
 #log-container {
     display: flex;
     flex-wrap: wrap;
@@ -14,17 +13,20 @@
     font-size: 14px;
     width: 100%;
 }
+
 #log-op-title {
     width: auto;
     margin-bottom: 20px;
     border-radius: 8px;
     padding: 20px;
 }
+
 #log-op-title h3 {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
     border: none;
 }
+
 #log pre { /* empecher le contenu des <pre> de dépasser */
     white-space: pre-wrap;       /* css-3 */
     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
@@ -38,33 +40,16 @@
 
 /* Boutons Top et Down pour atteindre le haut ou le bas de page */
 #scrollButtons-container {
-    flex: 0 4%;
+    /* flex: 0 4%; */
     order: 2;
 }
 /* Les boutons scroll sont fixes à l'intérieur du container */
 #scrollButtons {
     position: sticky;
     top: 570px;
-}
-
-.button-top-down, .button-top-down-details {
-    display: block;
-    margin: 5px;
-    width: 22px;
-    height: 22px;
-    padding: 6px;
-    border-radius: 60px;
-    background-color: #15bf7f;
-    box-shadow: rgb(0 0 0) 0px 10px 13px -12px, rgb(0 0 0 / 15%) 0px 0px 10px 2px;
-}
-
-.button-top-down img, .button-top-down-details img {
-    height: 22px;
-}
-
-.button-top-down:hover, .button-top-down-details:hover {
-    opacity: 1;
-    background-color: #12a16a;
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
 }
 
 .op-header-container {
