--- a/www/public/resources/styles/stats-hosts.css
+++ b/www/public/resources/styles/stats-hosts.css
@@ -15,7 +15,7 @@
     margin: auto;
 }
 
-.stats-access-table, .packages-table {
+.packages-table {
     width: 100%;
     margin: auto;
     margin-bottom: 15px;
@@ -29,35 +29,29 @@
     white-space: wrap;
 }
 
-.stats-access-table head,
 .packages-table head {
     font-weight: bold;
 }
 
-.stats-access-table tbody tr,
 .packages-table tr {
     background-color: #1d3349;
     border-radius: 2px;
 }
 
-.stats-access-table tbody tr:hover,
 .packages-table tr:hover {
     opacity: 1;
 }
 
-.stats-access-table td,
 .packages-table td {
     padding-left: 5px;
 }
 
-.stats-access-table tr td:first-child,
 td:first-child,
 .packages-table tr td:first-child {
     border-top-left-radius: 2px;
     border-bottom-left-radius: 2px;
 }
 
-.stats-access-table tr td:last-child,
 td:last-child,
 .packages-table tr td:last-child {
     border-top-right-radius: 2px;
@@ -97,8 +91,8 @@ td:last-child,
     padding-top: 5px;
 }
 
-.stats-access-table-request {
-    white-space: normal;
+.stats-access-request {
+    grid-template-columns: 1% 20% 20% auto;
 }
 
 .chart-loading {
